feat(docker,config): customize build for Gideon Studio branding with disabled market features
- Updated Dockerfile to copy custom LobeChat source instead of cloning
- Added Chinese mirror support and Chinese npm registry for corepack installs
- Modified README.md to describe Gideon Studio as a customized fork with branding, disabled discover/market feature, and PostgreSQL backend
- Marked deploy.sh as legacy and advised using new deploy-gideon.sh script
- Configured docker-compose.yml with Gideon Studio branding, disabled market feature flags, and environment variables for PostgreSQL, auth, and LLM providers지원

This change establishes Gideon Studio's core customizations: private branding, clean interface without market features, and full local data control via PostgreSQL, building on LobeChat foundation.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,30 @@
 version: '3.8'
 services:
   gideon-studio:
-    build: .
+    build:
+      context: .
+      args:
+        FEATURE_FLAGS: "-market"
     ports:
       - "3000:3210"
     environment:
       - NODE_ENV=production
+      # Gideon Studio Branding
+      - NEXT_PUBLIC_APP_NAME=Gideon Studio
+      - NEXT_PUBLIC_APP_DESCRIPTION=Your Personal AI Studio
+      - NEXT_PUBLIC_APP_URL=https://ai.gideon.studio
+      # Feature Flags - Disable Discover/Market
+      - FEATURE_FLAGS=-market
+      # Database
+      - NEXT_PUBLIC_SERVICE_MODE=server
+      - DATABASE_URL=postgresql://gideon:password@localhost:5432/gideon_studio
+      # Authentication (set your NextAuth secret here)
+      - NEXTAUTH_URL=http://localhost:3000
+      # Google Gemini (set your API key here)
+      - GOOGLE_API_KEY=${GOOGLE_API_KEY:-your-google-gemini-api-key}
+      # Additional LLMs (optional)
+      # - OPENAI_API_KEY=${OPENAI_API_KEY}
+      # - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
     volumes:
       - ./data:/app/data
     depends_on:
