🚑 Build Failure Fixes: Memory & Dependencies Resolved
**Fixed Exit Code 137 (Memory Exhaustion):**
- Added Docker memory limits (4GB limit, 2GB reservation)
- Optimized Next.js bundle generation with build ID
- Prevented large asset caching warnings

**Resolved Missing OpenTelemetry Dependencies:**
- Added @opentelemetry/winston-transport@^0.16.2
- Added @opentelemetry/exporter-jaeger@^2.1.0
- Fixed module resolution errors in observability stack

**Docker Compose Enhancements:**
- Increased ChromaDB service memory allocation
- Added proper dependency ordering for startup
- Enhanced environment variable configuration

**Next.js Build Optimizations:**
- Ensured consistent build IDs for caching
- Maintained existing webpack optimizations
- Preserved server minification settings for compatibility

These fixes should resolve the 24+ minute build timeout and module errors.
ChromaDB integration ready for testing!

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,12 @@ services:
         FEATURE_FLAGS: "-market"
     ports:
       - "3000:3210"
+    deploy:
+      resources:
+        limits:
+          memory: 4G
+        reservations:
+          memory: 2G
     environment:
       - NODE_ENV=production
       # Gideon Studio Branding
