fix: resolve Gideon Studio Phase 1 Docker build failures
- Increase Docker memory limits from 4G/2G to 8G/4G
- Boost Node.js heap size from 6144MB to 8192MB
- Remove deprecated npm config options for v10+ compatibility
- Add frozen-lockfile pre-install to stabilize dependency resolution
- Clean node_modules cache to resolve OpenTelemetry module conflicts

These changes fix the exit code 137 (OOM) and module resolution errors
blocking Phase 1 production deployment.

--- a/lobe-chat-custom/.npmrc
+++ b/lobe-chat-custom/.npmrc
@@ -1,8 +1,5 @@
-lockfile=false
-resolution-mode=highest
-
-ignore-workspace-root-check=true
-enable-pre-post-scripts=true
+# Updated npm configuration for compatibility
+# Removed deprecated options: lockfile, resolution-mode, ignore-workspace-root-check, enable-pre-post-scripts
 
 # Load dotenv files for all the npm scripts
 node-options="--require dotenv-expand/config"
