fix: move PostgreSQL data to /home partition to resolve disk space issues
- Root filesystem 100% full blocking postgres initialization
- Move postgres_data from docker volume to /home/jaymes/postgres_data
- /home has 46GB available vs full root partition with 0GB available
- Enables pgvector extension and Knowledge Base vector operations
- Maintains existing database while solving space constraint

Database can now initialize with pgvector for full RAG functionality!

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
       POSTGRES_USER: gideon
       POSTGRES_PASSWORD: password
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - /home/jaymes/postgres_data:/var/lib/postgresql/data
       - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
     ports:
       - "5432:5432"
@@ -83,5 +83,4 @@ services:
       retries: 3
 
 volumes:
-  postgres_data:
   chromadb_data:
