CRITICAL FIX: Enable Knowledge Base server mode with correct Dockerfile.database configuration
## 🎯 ROOT CAUSE FIXED: Wrong Dockerfile Usage

**Problem**: Docker-compose.yml was building with wrong/incomplete Dockerfile, causing compilation in 'client mode' despite runtime environment variables setting 'server mode'.

### ✅ FIXES IMPLEMENTED:

#### 1. ✅ Correct Dockerfile Usage
- **BEFORE**:  (uses generic Dockerfile)
- **AFTER**:  (uses server-optimized build)
- **Impact**: Ensures proper Next.js compilation with server mode features enabled

#### 2. ✅ Proper Build-Time Configuration
- **BEFORE**: No build args for
- **AFTER**:  as build arg
- **Impact**: Server mode baked into compiled frontend (runtime env vars ignored for NEXT_PUBLIC_*)

#### 3. ✅ Moved Environment Variable Correctly
- **REMOVED** from environment section:
- **ADDED** to build args:
- **Impact**: Only build-time variables affect server mode detection

#### 4. ✅ Added S3/MinIO Storage (Critical for Knowledge Base)
- **MinIO Service**: Local S3-compatible storage
- **S3 Configuration**: Required for file upload functionality
- **Health Checks**: Automatic service validation
- **Impact**: Knowledge Base can now store and retrieve documents

#### 5. ✅ Updated Dependencies
- **Added minio dependency** to gideon-studio service
- **Proper service ordering** with depends_on
- **Impact**: All services start in correct sequence

### 🔍 TECHNICAL EXPLANATION:

**Why NEXT_PUBLIC_SERVICE_MODE must be a build arg:**
- Next.js  variables are **statically embedded** during build
- Runtime environment variables for  are **ignored**
- Must pass as  in Dockerfile and  in docker-compose

**Why Dockerfile.database instead of generic Dockerfile:**
- Contains server-specific optimizations and build configurations
- Ensures proper compilation flags and dependencies
- Client vs server mode differentiation in build process

### 🎯 EXPECTED OUTCOME:

**✅ Knowledge Base Access**:  will show upload interface
**✅ Server Mode V

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,10 @@ services:
   gideon-studio:
     build:
       context: .
+      dockerfile: Dockerfile.database
       args:
         FEATURE_FLAGS: "-market"
+        NEXT_PUBLIC_SERVICE_MODE: "server"
     ports:
       - "3000:3210"
     deploy:
@@ -22,7 +24,6 @@ services:
       # Feature Flags - Disable Discover/Market
       - FEATURE_FLAGS=-market
       # Database
-      - NEXT_PUBLIC_SERVICE_MODE=server
       - DATABASE_DRIVER=node
       - DATABASE_URL=${DATABASE_URL:-postgresql://gideon:password@postgres:5432/gideon_studio}
       # Authentication - Use deployment URL from .env.local
@@ -30,6 +31,13 @@ services:
       - APP_URL=${APP_URL:-http://localhost:3000}
       - NEXT_AUTH_SECRET=${NEXT_AUTH_SECRET:-create-a-secure-secret}
       - KEY_VAULTS_SECRET=${KEY_VAULTS_SECRET:-create-a-secure-key}
+      # S3 Storage (Required for file uploads and Knowledge Base)
+      - S3_ENDPOINT=http://minio:9000
+      - S3_BUCKET=gideon-files
+      - S3_ACCESS_KEY_ID=${S3_ACCESS_KEY_ID:-minioadmin}
+      - S3_SECRET_ACCESS_KEY=${S3_SECRET_ACCESS_KEY:-minioadmin}
+      - S3_PUBLIC_DOMAIN=http://localhost:9000
+      - S3_ENABLE_PATH_STYLE=1
       # Google Gemini (set your API key here)
       - GOOGLE_API_KEY=${GOOGLE_API_KEY:-your-google-gemini-api-key}
       # ChromaDB Connection
@@ -42,6 +50,7 @@ services:
     depends_on:
       - postgres
       - chromadb
+      - minio
 
   postgres:
     image: pgvector/pgvector:pg15
@@ -82,5 +91,25 @@ services:
       timeout: 10s
       retries: 3
 
+  minio:
+    image: minio/minio:latest
+    container_name: gideon-minio
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    volumes:
+      - minio_data:/data
+    command: server /data --console-address ":9001"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    restart: unless-stopped
+
 volumes:
   chromadb_data:
+  minio_data:
