Fix Docker build context for Knowledge Base deployment
Critical build context fix - using lobe-chat-custom directory for Docker builds:
- Build context changed from '.' to './lobe-chat-custom'
- Uses existing Dockerfile.database in lobe-chat-custom/
- Properly resolves package and workspace file paths
- NEXT_PUBLIC_SERVICE_MODE build arg maintained for server mode

This resolves 'packages: not found' error in Docker build process.
Knowledge Base now has proper dependency compilation context.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   gideon-studio:
     build:
-      context: .
+      context: ./lobe-chat-custom
       dockerfile: Dockerfile.database
       args:
         FEATURE_FLAGS: "-market"
