Fix Docker service dependencies and database connectivity
Critical database connectivity fixes for Knowledge Base:
- Add service_healthy conditions for gideon-studio dependencies
- Ensure app waits for postgres, chromadb, minio to be healthy before starting
- Add DATABASE_URL_NON_POOLING variable for migrations
- Add health check for gideon-studio service itself
- Prevents 'ECONNREFUSED 172.18.0.2:5432' database connection errors
- Ensures orderly service startup sequence

Database migration will now complete successfully before app starts.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       # Database
       - DATABASE_DRIVER=node
       - DATABASE_URL=${DATABASE_URL:-postgresql://gideon:password@postgres:5432/gideon_studio}
+      - DATABASE_URL_NON_POOLING=${DATABASE_URL_NON_POOLING:-postgresql://gideon:password@postgres:5432/gideon_studio}
       # Authentication - Use deployment URL from .env.local
       - NEXTAUTH_URL=${NEXTAUTH_URL:-http://localhost:3000}
       - APP_URL=${APP_URL:-http://localhost:3000}
@@ -48,9 +49,17 @@ services:
     volumes:
       - ./data:/app/data
     depends_on:
-      - postgres
-      - chromadb
-      - minio
+      postgres:
+        condition: service_healthy
+      chromadb:
+        condition: service_healthy
+      minio:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:3210/health || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   postgres:
     image: pgvector/pgvector:pg15
