FINAL BYPASS: Disable ChromaDB dependency for Knowledge Base testing
Temporary ChromaDB service dependency disable to unblock Knowledge Base functionality:
- Comment out chromadb: condition: service_healthy in depends_on
- Allows gideon-studio container to start and test authentication fixes
- Maintains ChromaDB container running for future integration
- Prerequisites still enforced: postgres healthy + minio healthy

This enables testing of the complete Knowledge Base system with pgvector while ChromaDB runs in background.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,10 +55,11 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-      chromadb:
-        condition: service_healthy
       minio:
         condition: service_healthy
+      # TEMPORARY: chromadb condition bypassed for Knowledge Base testing
+      # chromadb:
+      #   condition: service_healthy
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:3210/health || exit 1"]
       interval: 30s
