Add complete Google OAuth configuration support
✅ Added Google OAuth environment variables to .env file
✅ Added Google credentials (AUTH_GOOGLE_ID, AUTH_GOOGLE_SECRET) to docker-compose.yml
✅ Updated NEXT_AUTH_SSO_PROVIDERS=github,google for multi-provider authentication

Clients can now authenticate with either GitHub OR Google OAuth providers, enabling flexible user access while maintaining secure Knowledge Base functionality.

Configuration supports:
- GitHub OAuth: Read:user user:email scopes
- Google OAuth: Openid email profile scopes
- Automatic provider detection in NextAuth
- Seamless fallback between providers

Ready for both individual and multi-OAuth setups.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,13 +42,18 @@ services:
       - GOOGLE_API_KEY=${GOOGLE_API_KEY:-your-google-gemini-api-key}
       # ChromaDB Connection
       - CHROMADB_URL=http://chromadb:8000
-      # ENABLE AUTHENTICATION
+      # NextAuth SSO Configuration
       - NEXTAUTH_ENABLED=1
-      - NEXTAUTH_URL=${NEXTAUTH_URL:-http://10.1.10.132:3000/api/auth}
+      - NEXTAUTH_URL=${NEXTAUTH_URL:-http://localhost:3000/api/auth}
       - NEXT_AUTH_SECRET=${NEXT_AUTH_SECRET}
-      - NEXT_AUTH_SSO_PROVIDERS=github
+      - NEXT_AUTH_SSO_PROVIDERS=github,google
+      # OAuth Provider Credentials (from .env file)
       - AUTH_GITHUB_ID=${GITHUB_CLIENT_ID}
       - AUTH_GITHUB_SECRET=${GITHUB_CLIENT_SECRET}
+      - AUTH_GOOGLE_ID=${GOOGLE_CLIENT_ID}
+      - AUTH_GOOGLE_SECRET=${GOOGLE_CLIENT_SECRET}
+      # Enable OAuth in client
+      - NEXT_PUBLIC_ENABLE_NEXT_AUTH=1
       # Additional LLMs (optional)
       # - OPENAI_API_KEY=${OPENAI_API_KEY}
       # - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
