--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,9 +44,9 @@ services:
       - CHROMADB_URL=http://chromadb:8000
       # NextAuth SSO Configuration
       - NEXTAUTH_ENABLED=1
-      - NEXTAUTH_URL=${NEXTAUTH_URL:-http://localhost:3000/api/auth}
+      - NEXTAUTH_URL=${NEXTAUTH_URL:-https://ai.gideon.studio/api/auth}
       - NEXT_AUTH_SECRET=${NEXT_AUTH_SECRET}
-      - NEXT_AUTH_SSO_PROVIDERS=github,google
+      - NEXT_AUTH_SSO_PROVIDERS=github
       # OAuth Provider Credentials (from .env file)
       - AUTH_GITHUB_ID=${GITHUB_CLIENT_ID}
       - AUTH_GITHUB_SECRET=${GITHUB_CLIENT_SECRET}
