--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       - NEXTAUTH_ENABLED=1
       - NEXTAUTH_URL=${NEXTAUTH_URL:-https://studio.euctools.ai/api/auth}
       - NEXT_AUTH_SECRET=${NEXT_AUTH_SECRET}
-      - NEXT_AUTH_SSO_PROVIDERS=github
+      - NEXT_AUTH_SSO_PROVIDERS=github,google
       # OAuth Provider Credentials (from .env file)
       - AUTH_GITHUB_ID=${GITHUB_CLIENT_ID}
       - AUTH_GITHUB_SECRET=${GITHUB_CLIENT_SECRET}
