fix(auth): correct NextAuth internal URL configuration to port 3210
BREAKING CHANGE: NextAuth was configured to use port 3000 internally
instead of the actual application port 3210, causing ECONNREFUSED errors
during authentication callbacks.

Changes:
- Set APP_URL to http://localhost:3210 (internal application port)
- Set NEXTAUTH_URL to http://localhost:3210/api/auth
- Add AUTH_URL fallback to http://localhost:3210/api/auth
- Keep NEXT_PUBLIC_APP_URL as https://studio.euctools.ai (external)
- Remove any hardcoded localhost:3000 references

Fixes: Authentication failures with "ECONNREFUSED 127.0.0.1:3000"
Affects: Both GitHub and Google OAuth providers

--- a/lobe-chat-custom/Dockerfile.database
+++ b/lobe-chat-custom/Dockerfile.database
@@ -1,5 +1,5 @@
 ## Set global build ENV
-ARG NODEJS_VERSION="20"
+ARG NODEJS_VERSION="22"
 
 ## Base image for all building stages
 FROM node:${NODEJS_VERSION}-slim AS base
@@ -99,11 +99,11 @@ RUN \
     && corepack use $(sed -n 's/.*"packageManager": "\(.*\)".*/\1/p' package.json) \
     # Install the dependencies
     && pnpm i \
-    # Add db migration dependencies
+    # Add db migration dependencies with PostgreSQL 15 compatible client
     && mkdir -p /deps \
     && cd /deps \
     && pnpm init \
-    && pnpm add pg drizzle-orm
+    && pnpm add pg@8.11.3 drizzle-orm
 
 COPY . .
 
