--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,11 @@ services:
       - DATABASE_DRIVER=node
       - DATABASE_URL=${DATABASE_URL:-postgresql://gideon:password@postgres:5432/gideon_studio}
       - DATABASE_URL_NON_POOLING=${DATABASE_URL_NON_POOLING:-postgresql://gideon:password@postgres:5432/gideon_studio}
-      # Application URL
-      - APP_URL=${APP_URL:-http://localhost:3000}
+      # Application URLs - Critical NextAuth Router Fixes
+      # Internal URL for container (must be port 3210, not 3000)
+      - APP_URL=http://localhost:3210
+      # External URL for public access
+      - NEXT_PUBLIC_APP_URL=${NEXT_PUBLIC_APP_URL:-https://studio.euctools.ai}
       - KEY_VAULTS_SECRET=${KEY_VAULTS_SECRET:-create-a-secure-key}
       # S3 Storage (Required for file uploads and Knowledge Base)
       - S3_ENDPOINT=http://minio:9000
@@ -42,9 +45,10 @@ services:
       - GOOGLE_API_KEY=${GOOGLE_API_KEY:-your-google-gemini-api-key}
       # ChromaDB Connection
       - CHROMADB_URL=http://chromadb:8000
-      # NextAuth SSO Configuration
+      # NextAuth SSO Configuration - FIXED INTERNAL URLs
       - NEXTAUTH_ENABLED=1
-      - NEXTAUTH_URL=${NEXTAUTH_URL:-https://studio.euctools.ai/api/auth}
+      - NEXTAUTH_URL=http://localhost:3210/api/auth
+      - AUTH_URL=http://localhost:3210/api/auth  # Fallback URL
       - NEXT_AUTH_SECRET=${NEXT_AUTH_SECRET}
       - NEXT_AUTH_SSO_PROVIDERS=github,google
       # OAuth Provider Credentials (from .env file)
