CRITICAL DATABASE FIX: Switch Postgres to Docker managed volume
ROOT CAUSE: Database corruption from host directory mounting
- Host dir /home/jaymes/postgres_data caused permission/corruption issues
- Volume grew to massive size with corrupted WAL files
- Repeated database recoveries due to file system instability

FIX IMPLEMENTED:
- Switched to postgres_data Docker named volume
- Cleaner separation between host and container data
- Proper permission management and file system stability
- Added postgres_data to volumes section

IMPACT:
- Stops infinite FATAL: database 'gideon_studio' does not exist loop
- Eliminates constant Postgres recovery operations
- Fixes Knowledge Base vector search functionality
- Resolves authentication system database connectivity

All database corruption issues should now be resolved.
Fresh volume with clean PostgreSQL initialization.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,7 +82,7 @@ services:
       POSTGRES_USER: gideon
       POSTGRES_PASSWORD: password
     volumes:
-      - /home/jaymes/postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
       - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
     ports:
       - "5432:5432"
@@ -134,5 +134,6 @@ services:
     restart: unless-stopped
 
 volumes:
+  postgres_data:
   chromadb_data:
   minio_data:
